# lumendb

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
lumendb/: __init__.py  main.py
lumendb/cmds/: __init__.py
lumendb/cmds/help/: __init__.py  command.py
lumendb/cmds/init/: __init__.py  command.py
lumendb/cmds/query/: __init__.py  command.py
tests/: __init__.py  test_database.py
